# qType

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-please.yml  rust.yml
dict/: Makefile  README.md  ru.dict
src/: app.rs  dict.rs  event.rs  main.rs  screens.rs  typer.rs  words.rs  wpm.rs
src/dictionary/: mod.rs
src/screens/: select_dict.rs  typing.rs
src/term/: mod.rs
src/typer/: mod.rs  ui.rs
