[package]
name = "qtype"
description = "Terminal-based typing speed practice app"
authors = ["ravsii"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/ravsii/typer"
respository = "https://github.com/ravsii/typer"
license = "MIT"
license-file = "LICENSE"
keywords = ["keybr", "monkeytype", "typing", "practice"]
exclude = ["/img"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
crossterm = "0.28.1"
itertools = "0.13.0"
rand = "0.8.5"
ratatui = "0.29.0"
